service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basic-auth-service
  labels:
    app: basic-auth-service
spec:
  type: ClusterIP
  selector:
    app: basic-auth
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
