ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-auth-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: basic-auth.veri.ie
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic-auth-service
            port:
              number: 8080
  tls:
  - hosts:
    - basic-auth.veri.ie
